@@ -1,17 +1,12 @@
-package com.sparksupport.SparkTraining.Services;
+package com.sparksupport.sparktraining.services;
 
-import com.sparksupport.SparkTraining.Entity.Book;
-import com.sparksupport.SparkTraining.Entity.BookIssues;
-import com.sparksupport.SparkTraining.Repository.BookIssuesRepository;
-import jakarta.validation.Valid;
-import org.hibernate.type.CollectionType;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.sparksupport.sparktraining.entity.BookIssues;
+import com.sparksupport.sparktraining.repository.BookIssuesRepository;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
-import java.awt.print.Pageable;
 import java.time.LocalDate;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -22,15 +17,14 @@ import java.util.stream.Collectors;
 @Service
 public class BookIssuesService {
 
-    @Autowired
-    private BookIssuesRepository bookIssuesRepository;
+    private final BookIssuesRepository bookIssuesRepository;
+
+    BookIssuesService(BookIssuesRepository bookIssuesRepository) {
+        this.bookIssuesRepository = bookIssuesRepository;
+    }
 
     public BookIssues addBookIssues(BookIssues bookIssues){
         return bookIssuesRepository.save(bookIssues);
-    }
-
-    public List<BookIssues> addBooksIssues(List<BookIssues> booksIssues) {
-        return bookIssuesRepository.saveAll(booksIssues);
     }
 
     public List<BookIssues> getBooksIssues(){
@@ -38,28 +32,28 @@ public class BookIssuesService {
     }
 
     public List<Map<String,String>> getBorrowedBooksAndMembers() {
-        // Converting List of Object[] into List of Map<> by defning the key and value
+        // Converting List of Object[] into List of Map<> by defining the key and value
 
         return bookIssuesRepository.findAllBorrowedBookAndMembers().stream()
-                .map((record) ->{
+                .map(object -> {
                     Map<String,String> hm = new HashMap<>();
-                    hm.put("BookTitle", String.valueOf(record[0]));
-                    hm.put("MemberName", String.valueOf(record[1]));
-                    hm.put("BorrowDate", String.valueOf(record[2]));
+                    hm.put("Book Name", String.valueOf(object[0]));
+                    hm.put("MemberName", String.valueOf(object[1]));
+                    hm.put("BorrowDate", String.valueOf(object[2]));
                     return hm;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Map<String, String>> getBooksOnLoad() {
         return bookIssuesRepository.findLoanBooks().stream()
-                .map((data) ->{
+                .map(data -> {
                     Map<String,String> map = new HashMap<>();
                     map.put("BookTitle", String.valueOf(data[0]));
                     map.put("IssueDate", String.valueOf(data[1]));
                     return map;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Map<String, String>> getMembersBorrowedAfterDate(LocalDate date) {
@@ -67,44 +61,41 @@ public class BookIssuesService {
                 .map(object ->{
                     Map<String,String> map = new HashMap<>();
                     map.put("Member",String.valueOf(object[0]));
-                    map.put("BookTitle", String.valueOf(object[1]));
+                    map.put("Book-Title", String.valueOf(object[1]));
                     map.put("BorrowDate", String.valueOf(object[2]));
                     return map;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<?> getCountBooksBorrowedEachMember(){
+    public List<Map<String, String>> getCountBooksBorrowedEachMember() {
         return bookIssuesRepository.findMemberBooksCount().stream()
-                .map(anyType ->{
-                    Object[] object = (Object[]) anyType;
+                .map(object -> {
                     Map<String,String> map = new HashMap<>();
                     map.put("User Name", String.valueOf(object[0]));
                     map.put("Total Books", String.valueOf(object[1]));
                     return map;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<?> getMostBorrowedBook(){
+    public List<Map<String, String>> getMostBorrowedBook() {
         return bookIssuesRepository.findMostBorrowedBook().stream()
-                .map(anyType ->{
-                    Object[] object = (Object[]) anyType;
+                .map(object -> {
                     Map<String, String> map = new HashMap<>();
                     map.put("Book Id",String.valueOf(object[0]));
-                    map.put("Book Title", String.valueOf(object[1]));
+                    map.put("TitleOfBook", String.valueOf(object[1]));
                     map.put("Total Borrowed", String.valueOf(object[2]));
                     return map;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<?> getLoanBookDetails(){
+    public List<Map<String, String>> getLoanBookDetails() {
         return bookIssuesRepository.findLoanBooksDetails().stream()
-                .map(anyType ->{
-                    Object[] object = (Object[]) anyType;
+                .map(object -> {
                     LinkedHashMap<String, String> map = new LinkedHashMap<>();
-                    map.put("Book Title", String.valueOf(object[0]));
+                    map.put("BookTitle", String.valueOf(object[0]));
                     map.put("Member Name", String.valueOf(object[1]));
                     map.put("Borrowed Date", String.valueOf(object[2]));
                     map.put("Return Date", String.valueOf(object[3]));
@@ -113,54 +104,48 @@ public class BookIssuesService {
                 .collect(Collectors.toList());
     }
 
-    public ResponseEntity<?> getLatestIssuedBookUsingPagination(int page, int size){
+    public ResponseEntity<Map<String, Object>> getLatestIssuedBookUsingPagination(int page, int size) {
         PageRequest pageRequest = PageRequest.of(page,size);
         Page<?> latestBook = bookIssuesRepository.findLatestBookByPaging(pageRequest);
         Map<String, Object> response = new HashMap<>();
         response.put("Books", latestBook.getContent());
-
-//        response.put("Current Page", latestBook.getNumber());
-//        response.put("Total Books", latestBook.getTotalElements());
-//        response.put("Total Pages", latestBook.getTotalPages());
-        return ResponseEntity.ok().body(response);
+        return ResponseEntity.ok(response);
     }
 
-    public List<?> getAuthorMembers(){
+
+    public List<String> getAuthorMembers() {
         return bookIssuesRepository.findAuthorMember();
     }
 
-    public List<?> getMemberBorrowedMoreThanAvg() {
+    public List<Object[]> getMemberBorrowedMoreThanAvg() {
         return bookIssuesRepository.findMemberBorrowedMoreThanAvg();
     }
 
-    public List<?> getMostBorrowed(int val) {
+    public List<Map<String, String>> getMostBorrowed(int val) {
         return bookIssuesRepository.findMostBorrowed(val).stream()
-                .map(anyType ->{
-                    Object[] object = (Object[]) anyType;
+                .map(object -> {
                     Map<String,String> map = new HashMap<>();
                     map.put("Book Title", String.valueOf(object[0]));
                     map.put("Total Borrow", String.valueOf(object[1]));
                     return map;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<?> getMemberBorrowedMultiCategory() {
+    public List<Map<String, String>> getMemberBorrowedMultiCategory() {
         return bookIssuesRepository.findMemberBorrowedMultiCategory().stream()
-                .map(anyType ->{
-                    Object[] object = (Object[]) anyType;
+                .map(object -> {
                     Map<String,String> map = new HashMap<>();
                     map.put("Member Name", String.valueOf(object[0]));
                     map.put("Borrow Category Count", String.valueOf(object[1]));
                     return map;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<?> getBorrowedReturnedWithinDays(int days) {
+    public List<Map<String, String>> getBorrowedReturnedWithinDays(int days) {
         return bookIssuesRepository.findBorrowedReturnedWithinDays(days).stream()
-                .map(anyType -> {
-                    Object[] object = (Object[]) anyType;
+                .map(object -> {
                     LinkedHashMap<String,String> map = new LinkedHashMap<>();
                     map.put("Book Id",String.valueOf(object[0]));
                     map.put("Book Title", String.valueOf(object[1]));
